integration_tests/codegen_fail/fail/scalar/type_alias/impl_with_not_all_resolvers.stderr
error: GraphQL scalar all custom resolvers have to be provided via `with` or combination of `to_output_with`, `from_input_with`, `parse_token_with` attributes
 --> fail/scalar/type_alias/impl_with_not_all_resolvers.rs:6:1
  |
6 | type CustomScalar = Scalar;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
